More 1.21.5 port work in progress (not finished)